--- a/components/network/cloudflare-dns/externalsecret.yaml
+++ b/components/network/cloudflare-dns/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        CF_API_TOKEN: "{{.API_KEY_CASA}}"
+        CF_API_TOKEN: "{{.API_TOKEN_CASA}}"
         CF_ZONE_ID: "{{ .ZONE_ID_CASA }}"
   dataFrom:
     - extract:
