(chore): add cloudtunnel id

--- a/clusters/talos/apps/argo-system/argo-cd/external-secret.yaml
+++ b/clusters/talos/apps/argo-system/argo-cd/external-secret.yaml
@@ -18,6 +18,9 @@ spec:
         GATEWAY_NAME: "{{.GATEWAY}}"
         GATEWAY_NAMESPACE: "{{.GATEWAY_NAMESPACE}}"
         GATEWAY_EXTERNAL: "{{.GATEWAY_EXTERNAL}}"
+        CLOUDFLARE_TUNNEL_ID: "{{.TUNNEL_ID_CASA}}"
   dataFrom:
     - extract:
         key: talos
+    - extract:
+        key: cloudflare
