--- a/components/network/cloudflare-tunnel/dnsendpoint.yaml
+++ b/components/network/cloudflare-tunnel/dnsendpoint.yaml
@@ -8,4 +8,5 @@ spec:
   endpoints:
     - dnsName: "external.${CLUSTER_DOMAIN}"
       recordType: CNAME
-      targets: ["${CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"]
+      targets:
+        - "${CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"
