--- a/components/network/cloudflare-tunnel/configs/config.yaml
+++ b/components/network/cloudflare-tunnel/configs/config.yaml
@@ -1,10 +1,8 @@
 ---
-originRequest:
-  originServerName: "external.${CLUSTER_DOMAIN}"
-
 ingress:
-  - hostname: "${CLUSTER_DOMAIN}"
-    service: &svc https://cilium-gateway-external.kube-system.svc.cluster.local
   - hostname: "*.${CLUSTER_DOMAIN}"
-    service: *svc
+    originRequest:
+      http2Origin: true
+      originServerName: external.${CLUSTER_DOMAIN}
+    service: https://envoy-external.network.svc.cluster.local:443
   - service: http_status:404
