--- a/components/default/webhook-relay/externalsecret.yaml
+++ b/components/default/webhook-relay/externalsecret.yaml
@@ -14,6 +14,7 @@ spec:
       data:
         WEBHOOK_SECRET: "{{.WEBHOOK_SECRET}}"
         OMV_WEBHOOK_URL: "{{.OMV_WEBHOOK_URL}}"
+        TALOS_WEBHOOK_URL: "{{.TALOS_WEBHOOK_URL}}"
   dataFrom:
     - extract:
         key: webhook-relay
