--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -9,30 +9,27 @@
     ":automergeDigest",
     ":automergeBranch"
   ],
-  "platform": "github",
-  "username": "renovate[bot]",
-  "repositories": ["vikaspogu/home-ops"],
-  "onboarding": false,
-  "requireConfig": "optional",
-  "suppressNotifications": ["prIgnoreNotification"],
-  "rebaseWhen": "conflicted",
   "dependencyDashboard": true,
-  "dependencyDashboardTitle": "🤖 Renovate Dashboard",
+  "dependencyDashboardTitle": "Renovate Dashboard 🤖",
+  "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
+  "rebaseWhen": "conflicted",
+  "ignorePaths": ["**/*.sops.*"],
+  "helm-values": {
+    "fileMatch": ["(^|/)clusters/.+\\.ya?ml(?:\\.j2)?$"]
+  },
+  "helmfile": {
+    "fileMatch": ["(^|/)helmfile\\.ya?ml(?:\\.j2)?$"]
+  },
+  "kubernetes": {
+    "fileMatch": ["(^|/)clusters/.+\\.ya?ml(?:\\.j2)?$"]
+  },
+  "kustomize": {
+    "fileMatch": ["(^|/)kustomization\\.ya?ml(?:\\.j2)?$"]
+  },
+  // commit message topics
   "commitMessageTopic": "{{depName}}",
   "commitMessageExtra": "to {{newVersion}}",
   "commitMessageSuffix": "",
-  "timezone": "America/New_York",
-  "ignorePaths": ["**/*.sops.*"],
-  "helm-values": {
-    "fileMatch": ["components/.+/values\\.ya?ml$"]
-  },
-  "kubernetes": {
-    "fileMatch": ["components/.+\\.ya?ml$", "clusters/.+\\.ya?ml$"],
-    "ignorePaths": [
-      "components/common/helm-secrets-private-keys.sops.yaml",
-      "components/external-secrets/onepassword-connect/secrets.sops.yaml"
-    ]
-  },
   "packageRules": [
     // version pinning
     {
