--- a/components/default/freshrss/http-route.yaml
+++ b/components/default/freshrss/http-route.yaml
@@ -2,7 +2,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: &app freshrss
+  name: &app freshrss-ftr
   labels:
     app.kubernetes.io/instance: *app
     app.kubernetes.io/name: *app
@@ -17,6 +17,29 @@ spec:
       namespace: ${GATEWAY_NAMESPACE}
       sectionName: https
   hostnames: ["rss-ftr.${CLUSTER_DOMAIN}"]
+  rules:
+    - backendRefs:
+        - name: freshrss-fivefilters-full-text-rss
+          port: 80
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: &app freshrss
+  labels:
+    app.kubernetes.io/instance: *app
+    app.kubernetes.io/name: *app
+  annotations:
+    gethomepage.dev/href: "https://rss.${CLUSTER_DOMAIN}"
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/group: Ingress
+    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/freshrss.png
+spec:
+  parentRefs:
+    - name: ${GATEWAY_NAME}
+      namespace: ${GATEWAY_NAMESPACE}
+      sectionName: https
+  hostnames: ["rss.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
         - name: freshrss-app
