--- a/clusters/talos/apps/default/homepage/externalsecret.yaml
+++ b/clusters/talos/apps/default/homepage/externalsecret.yaml
@@ -99,7 +99,7 @@ spec:
     - secretKey: HOMEPAGE_VAR_CLOUDFLARED_TUNNELID
       remoteRef:
         key: cloudflare
-        property: TUNNEL_ID
+        property: TUNNEL_ID_CASA
     - secretKey: HOMEPAGE_VAR_CLOUDFLARED_API_TOKEN
       remoteRef:
         key: cloudflare
