(chore): fix secret keys pxm

--- a/clusters/talos/apps/default/homepage/externalsecret.yaml
+++ b/clusters/talos/apps/default/homepage/externalsecret.yaml
@@ -15,11 +15,11 @@ spec:
     - secretKey: HOMEPAGE_VAR_PROXMOX_USER
       remoteRef:
         key: proxmox
-        property: api-user
+        property: HOMEPAGE_API_USER
     - secretKey: HOMEPAGE_VAR_PROXMOX_PASSWORD
       remoteRef:
         key: proxmox
-        property: api-user-secret
+        property: HOMEPAGE_API_USER_TOKEN
     - secretKey: HOMEPAGE_VAR_PROXMOX_IP
       remoteRef:
         key: homepage
