--- a/clusters/talos/apps/argo-system/argo-cd/external-secret.yaml
+++ b/clusters/talos/apps/argo-system/argo-cd/external-secret.yaml
@@ -19,8 +19,11 @@ spec:
         GATEWAY_NAMESPACE: "{{.GATEWAY_NAMESPACE}}"
         GATEWAY_EXTERNAL: "{{.GATEWAY_EXTERNAL}}"
         CLOUDFLARE_TUNNEL_ID: "{{.TUNNEL_ID_CASA}}"
+        NAS_IP_ADDRESS: "{{.IP_ADDRESS}}"
   dataFrom:
     - extract:
         key: talos
     - extract:
         key: cloudflare
+    - extract:
+        key: synology-homepage
