--- a/components/default/audiobookshelf/http-route.yaml
+++ b/components/default/audiobookshelf/http-route.yaml
@@ -11,9 +11,10 @@ metadata:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Ingress
     gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/audiobookshelf.png
+    external-dns.alpha.kubernetes.io/target: "external.${CLUSTER_DOMAIN}"
 spec:
   parentRefs:
-    - name: ${GATEWAY_NAME}
+    - name: ${GATEWAY_EXTERNAL}
       namespace: ${GATEWAY_NAMESPACE}
       sectionName: https
   hostnames: ["ab.${CLUSTER_DOMAIN}"]
