(chore): fix svc name

--- a/components/default/reverse-proxy/nas.yaml
+++ b/components/default/reverse-proxy/nas.yaml
@@ -44,5 +44,5 @@ spec:
   hostnames: ["nas.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: *app
+        - name: reverse-proxy-nas
           port: 5000
