--- a/components/default/piped/values.yaml
+++ b/components/default/piped/values.yaml
@@ -47,7 +47,7 @@ controllers:
           repository: ghcr.io/bjw-s-labs/piped-frontend
           tag: 2025.3.17@sha256:8ed05c7df0bc8899e54a3952a99b63d55cdc7669d759beeb9370fbb32330468b
         env:
-          BACKEND_HOSTNAME: piped-api.${CLUSTER_DOMAIN}
+          BACKEND_HOSTNAME: papi.${CLUSTER_DOMAIN}
         probes:
           liveness:
             enabled: true
