--- a/components/observability/kube-prometheus-stack/values.yaml
+++ b/components/observability/kube-prometheus-stack/values.yaml
@@ -31,7 +31,8 @@ alertmanager:
 kubeApiServer:
   serviceMonitor:
     selector:
-      k8s-app: kube-apiserver
+      matchLabels:
+        k8s-app: kube-apiserver
 kubeScheduler:
   service:
     selector:
