(fix): disbale omv

--- a/clusters/omv/apps/observability/kube-prometheus-stack/kustomization.yaml
+++ b/clusters/omv/apps/observability/kube-prometheus-stack/kustomization.yaml
@@ -15,6 +15,10 @@ helmCharts:
       kubeEtcd:
         enabled: false
       defaultRules:
+        disabled:
+          KubeControllerManagerDown: true
+          KubeProxyDown: true
+          KubeSchedulerDown: true
         rules:
           etcd: false
     valuesFile: ../../../../../components/observability/kube-prometheus-stack/values.yaml
