--- a/components/observability/kube-prometheus-stack/values.yaml
+++ b/components/observability/kube-prometheus-stack/values.yaml
@@ -34,6 +34,10 @@ kubeEtcd:
       component: kube-apiserver # etcd runs on control plane nodes
 kubeProxy:
   enabled: false
+kubeControllerManager:
+  enabled: false
+kubeScheduler:
+  enabled: false
 prometheus:
   route:
     main:
