--- a/clusters/omv/apps/argo-system/argo-cd/external-secret.yaml
+++ b/clusters/omv/apps/argo-system/argo-cd/external-secret.yaml
@@ -17,6 +17,32 @@ spec:
         INTERNAL_IP_ADDRESS: "{{.INTERNAL_IP_ADDRESS}}"
         GATEWAY_NAME: "{{.GATEWAY}}"
         GATEWAY_NAMESPACE: "{{.GATEWAY_NAMESPACE}}"
+        PUSHOVER_USER_KEY: "{{.user_key}}"
   dataFrom:
     - extract:
         key: omv
+    - extract:
+        key: Pushover
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: argocd-notifications-secret
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword-connect
+  target:
+    name: argocd-notifications-secret
+    creationPolicy: Merge
+    template:
+      engineVersion: v2
+      data:
+        pushover-user: "{{.user_key}}"
+        pushover-token: "{{.ARGOCD_API_KEY}}"
+  dataFrom:
+    - extract:
+        conversionStrategy: Default
+        decodingStrategy: None
+        key: Pushover
+        metadataPolicy: None
