--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -1,5 +1,7 @@
 default:
   app:
+    annotations:
+      notifications.argoproj.io/subscribe.on-sync-succeeded.pushover: ${PUSHOVER_USER_KEY}
     enabled: true
     enableAutoSync: true
     autoSyncPrune: true
