(fix): remove user api key

--- a/components/argo-system/argo-cd/values.yaml
+++ b/components/argo-system/argo-cd/values.yaml
@@ -318,6 +318,9 @@ notifications:
   argocdUrl: "https://argocd.${CLUSTER_DOMAIN}"
   secret:
     create: false
+  notifiers:
+    service.pushover: |
+      token: $pushover-token
   templates:
     template.app-health-degraded: |
       message: |
