--- a/components/default/piped/http-route.yaml
+++ b/components/default/piped/http-route.yaml
@@ -39,3 +39,21 @@ spec:
     - backendRefs:
         - name: piped-backend
           port: 8080
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: &app piped-ytproxy
+  labels:
+    app.kubernetes.io/instance: *app
+    app.kubernetes.io/name: *app
+spec:
+  parentRefs:
+    - name: ${GATEWAY_NAME}
+      namespace: ${GATEWAY_NAMESPACE}
+      sectionName: https
+  hostnames: ["pproxy.${CLUSTER_DOMAIN}"]
+  rules:
+    - backendRefs:
+        - name: piped-ytproxy
+          port: 8080
