(chore): fix nas name

--- a/components/downloads/qbittorrent/values.yaml
+++ b/components/downloads/qbittorrent/values.yaml
@@ -139,8 +139,8 @@ persistence:
           - path: /config
   media:
     type: nfs
-    server: synology.a113.internal
-    path: "/volume1/media"
+    server: omv-baymx.a113.internal
+    path: "/storage0/media"
     advancedMounts:
       qbittorrent:
         app:
