--- a/components/default/bytestash/external-secret.yaml
+++ b/components/default/bytestash/external-secret.yaml
@@ -15,6 +15,9 @@ spec:
         OIDC_CLIENT_ID: "{{.CLIENT_ID}}"
         OIDC_CLIENT_SECRET: "{{.CLIENT_SECRET}}"
         JWT_SECRET: "{{.JWT_SECRET}}"
+        OIDC_ISSUER_URL: "https://id.{{.CLUSTER_DOMAIN}}/application/o/bytestash/"
   dataFrom:
     - extract:
         key: bytestash
+    - extract:
+        key: talos
