(chore): use groupid

--- a/components/default/bytestash/values.yaml
+++ b/components/default/bytestash/values.yaml
@@ -1,5 +1,13 @@
 controllers:
   bytestash:
+    pod:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: "OnRootMismatch"
+        supplementalGroups:
+          - 100
     annotations:
       reloader.stakater.com/auto: "true"
     containers:
