--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -274,3 +274,20 @@ applications:
       namespace: argo-system
     source:
       path: clusters/omv/apps/argo-system/kubechecks
+
+
+  zot:
+    annotations:
+      argocd.argoproj.io/sync-wave: "35"
+    destination:
+      namespace: default
+    source:
+      path: components/default/zot
+      plugin:
+        env:
+          - name: STORAGE_CLASS
+            value: longhorn-volsync
+          - name: VOLUME_SNAPSHOT_CLASS
+            value: longhorn
+          - name: VOLSYNC_CAPACITY
+            value: 10Gi
