--- a/components/default/zot/kustomization.yaml
+++ b/components/default/zot/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./http-route.yaml
-  - ./externalsecret.yaml
+  - ./external-secret.yaml
 components:
   - ../../volsync-system/volsync-replication
 
