--- a/components/default/zot/http-route.yaml
+++ b/components/default/zot/http-route.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/instance: *app
     app.kubernetes.io/name: *app
   annotations:
-    gethomepage.dev/href: "https://zot.rafaribe.com"
+    gethomepage.dev/href: "https://zot.${CLUSTER_DOMAIN}"
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Ingress
     gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/zot-registry.png
