(chore): fix key

--- a/components/default/kite/external-secret.yaml
+++ b/components/default/kite/external-secret.yaml
@@ -14,8 +14,8 @@ spec:
       engineVersion: v2
       data:
         # App
-        KITE_USERNAME: "{{ .KITE_USERNAME }}"
-        KITE_PASSWORD: "{{ .KITE_PASSWORD }}"
+        KITE_USERNAME: "{{ .username }}"
+        KITE_PASSWORD: "{{ .password }}"
         DB_TYPE: postgres
         DB_DSN: postgresql://{{ .POSTGRES_USER }}:{{ .POSTGRES_PASS }}@postgres17-rw.default.svc.cluster.local:5432/kite
 
