--- a/components/default/kite/kustomization.yaml
+++ b/components/default/kite/kustomization.yaml
@@ -1,9 +1,11 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: default
 resources:
   - ./external-secret.yaml
   - ./http-route.yaml
+  - ./rbac.yaml
 helmCharts:
   - name: app-template
     releaseName: kite
