--- a/components/default/kite/values.yaml
+++ b/components/default/kite/values.yaml
@@ -1,3 +1,5 @@
+serviceAccount:
+  kite: {}
 controllers:
   kite:
     initContainers:
@@ -12,6 +14,8 @@ controllers:
       annotations:
         reloader.stakater.com/auto: "true"
     replicas: 1
+    serviceAccount:
+      identifier: kite
     containers:
       app:
         image:
