--- a/clusters/talos/apps/20-applications.yaml
+++ b/clusters/talos/apps/20-applications.yaml
@@ -489,6 +489,22 @@ applications:
           - name: VOLSYNC_CAPACITY
             value: 20Gi
 
+  qui:
+    annotations:
+      argocd.argoproj.io/sync-wave: "20"
+    destination:
+      namespace: downloads
+    source:
+      path: components/downloads/qui
+      plugin:
+        env:
+          - name: STORAGE_CLASS
+            value: ceph-block
+          - name: VOLUME_SNAPSHOT_CLASS
+            value: csi-ceph-blockpool
+          - name: VOLSYNC_CAPACITY
+            value: 10Gi
+
   sabnzbd:
     annotations:
       argocd.argoproj.io/sync-wave: "20"
