(chore): update to use oci registry

--- a/components/default/file-browser/kustomization.yaml
+++ b/components/default/file-browser/kustomization.yaml
@@ -9,7 +9,7 @@ helmCharts:
   - name: app-template
     releaseName: file-browser
     namespace: default
-    repo: https://bjw-s-labs.github.io/helm-charts
+    repo: oci://ghcr.io/bjw-s-labs/helm
     version: "4.4.0"
     valuesFile: values.yaml
 configMapGenerator:
