--- a/components/default/home-assistant/kustomization.yaml
+++ b/components/default/home-assistant/kustomization.yaml
@@ -9,6 +9,6 @@ helmCharts:
   - name: app-template
     releaseName: home-assistant
     namespace: default
-    repo: https://bjw-s-labs.github.io/helm-charts
+    repo: oci://ghcr.io/bjw-s-labs/helm
     version: "4.4.0"
     valuesFile: values.yaml
