--- a/components/volsync-system/kopia/kustomization.yaml
+++ b/components/volsync-system/kopia/kustomization.yaml
@@ -20,6 +20,6 @@ helmCharts:
   - name: app-template
     releaseName: kopia
     namespace: volsync-system
-    repo: https://bjw-s-labs.github.io/helm-charts
+    repo: oci://ghcr.io/bjw-s-labs/helm
     version: "4.4.0"
     valuesFile: values.yaml
