--- a/components/default/atuin/kustomization.yaml
+++ b/components/default/atuin/kustomization.yaml
@@ -10,6 +10,6 @@ helmCharts:
   - name: app-template
     releaseName: atuin
     namespace: default
-    repo: https://bjw-s-labs.github.io/helm-charts
+    repo: oci://ghcr.io/bjw-s-labs/helm
     version: "4.4.0"
     valuesFile: values.yaml
