--- a/components/default/flaresolverr/kustomization.yaml
+++ b/components/default/flaresolverr/kustomization.yaml
@@ -7,6 +7,6 @@ helmCharts:
   - name: app-template
     releaseName: flaresolverr
     namespace: default
-    repo: https://bjw-s-labs.github.io/helm-charts
+    repo: oci://ghcr.io/bjw-s-labs/helm
     version: "4.4.0"
     valuesFile: values.yaml
