--- a/components/default/syncthing/kustomization.yaml
+++ b/components/default/syncthing/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
 helmCharts:
   - name: app-template
     releaseName: syncthing
-    repo: https://bjw-s-labs.github.io/helm-charts
+    repo: oci://ghcr.io/bjw-s-labs/helm
     version: "4.4.0"
     valuesFile: values.yaml
