--- a/components/default/airflow/externalsecret.yaml
+++ b/components/default/airflow/externalsecret.yaml
@@ -13,6 +13,7 @@ spec:
     template:
       engineVersion: v2
       data:
+        connection: ""
         webserver-secret-key: '{{.WEBSERVER_SECRET_KEY}}'
   dataFrom:
     - extract:
