--- a/clusters/omv/apps/20-applications.yaml
+++ b/clusters/omv/apps/20-applications.yaml
@@ -8,13 +8,13 @@ applications:
     source:
       path: clusters/omv/apps/argo-system/argo-cd
 
-  # airflow:
-  #   annotations:
-  #     argocd.argoproj.io/sync-wave: "20"
-  #   destination:
-  #     namespace: default
-  #   source:
-  #     path: components/default/airflow
+  airflow:
+    annotations:
+      argocd.argoproj.io/sync-wave: "20"
+    destination:
+      namespace: default
+    source:
+      path: components/default/airflow
 
   garage-app:
     annotations:
