(fix): update exector

--- a/components/default/airflow/http-route.yaml
+++ b/components/default/airflow/http-route.yaml
@@ -19,5 +19,5 @@ spec:
   hostnames: ["airflow.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: airflow-webserver
+        - name: airflow-api-server
           port: 8080
